--- a/calc.html
+++ b/calc.html
@@ -103,11 +103,11 @@
                 <td>宝具等级</td>
                 <td>
                     <select id="ddlNpLevel">
-                        <option value="NP1">1</option>
-                        <option value="NP2">2</option>
-                        <option value="NP3">3</option>
-                        <option value="NP4">4</option>
-                        <option value="NP5">5</option>
+                        <option value="0">1</option>
+                        <option value="1">2</option>
+                        <option value="2">3</option>
+                        <option value="3">4</option>
+                        <option value="4">5</option>
                     </select>
                 </td>
                 <td>宝具倍率(%)</td>
@@ -560,7 +560,7 @@
 	    additionalCoef = npEffect.npRemainHpDamage * Math.max(0, 1 - remainHp / totalHp);
 	}
         //总宝具倍率
-        let npCoef = servant.NP[$("ddlNpLevel").value] + additionalCoef;
+        let npCoef = servant.NP[$("ddlNpLevel").selectedIndex] + additionalCoef;
         //向下取整总宝具倍率
         $("txtNpCoefficient").value = Math.floor(npCoef * 10) / 10;
     }
@@ -571,10 +571,10 @@
 	let npEffect = servant.npEffect;
 	let isNpRemainHpDamage = (npEffect && npEffect.npRemainHpDamage);
 	if(npEffect && npEffect.npCoefficient) {
-            $("txtNpSpecialAttack").value = servant.NP[$("ddlNpLevel").value];
+            $("txtNpSpecialAttack").value = servant.NP[$("ddlNpLevel").selectedIndex];
 	    return;
 	}
-	$("txtNpCoefficient").value = servant.NP[$("ddlNpLevel").value];
+	$("txtNpCoefficient").value = servant.NP[$("ddlNpLevel").selectedIndex];
         if (ocs.type == "NpRemainHpDamage" || isNpRemainHpDamage) {//双子宝具
             calNpRemainHpDamage();
         }
@@ -586,7 +586,7 @@
     function calOcNpDamage() {
         let servant = servants[$("ddlServant").value];
         let ocLevel = $("ddlOvercharge").value;
-        let npCoef = servant.NP[$("ddlNpLevel").value] + servant.oc[ocLevel];
+        let npCoef = servant.NP[$("ddlNpLevel").selectedIndex] + servant.oc[ocLevel];
         $("txtNpCoefficient").value = npCoef;
     }
     //绑定从者基本信息
@@ -686,33 +686,34 @@
 	if (ocs["oc1"] == ocs["oc5"]) {
 	    $("ddlOvercharge").selectedIndex = 0;
 	}
-	if (ocs.type == "NpRemainHpDamage") {//双子宝具倍率提升
-            calNpRemainHpDamage();
-        }
-        else if (ocs.type == "OcNpDamage") {//自爆弓倍率提升
-            calOcNpDamage();
-        }
-	else if (ocs.type == "OcCardBuff") {//R金时OC绿魔放
-            $("txtCardBuff").value = $("txtCardBuff").basevalue + ocs[ocLevel];
-        }
-        else if (ocs.type == "OcAttackBuff") {//B兰OC加攻
-            $("txtAttackBuff").value = ocs[ocLevel];
-        }
-        else if (ocs.type == "DefDecrease") {//宝具前降防
-            $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue - ocs[ocLevel];
-        }
-        else if (ocs.type == "OcNpStrength") {//宫本半藏OC宝具威力提升
-            $("txtNpStrength").value = $("txtNpStrength").basevalue + ocs[ocLevel];
-        }
-	else if (ocs.type == "CombinedDecrease") {
-	    $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue - ocs[ocLevel];
-	    $("txtCardBuff").value = $("txtCardBuff").basevalue + ocs[ocLevel];
-	}
-	else if (ocs.type == "NpSpecialAttack") {//宝具特攻
-            $("txtNpSpecialAttack").value = ocs[ocLevel];
-        }
-        else if (ocs.type == "SpecialAttackBuff") {//杰克女性特攻
-            $("txtSpecialAttack").value = ocs[ocLevel];
+	switch(ocs.type) {
+	    case "NpRemainHpDamage": //双子宝具倍率提升
+                calNpRemainHpDamage();
+        	break;
+            case "OcNpDamage": //自爆弓倍率提升
+                calOcNpDamage();
+        	break;
+	    case "OcCardBuff": //R金时OC绿魔放
+                $("txtCardBuff").value = $("txtCardBuff").basevalue + ocs[ocLevel];
+        	break;
+            case "OcAttackBuff": //B兰OC加攻
+                $("txtAttackBuff").value = ocs[ocLevel];
+        	break;
+            case "DefDecrease": //宝具前降防
+                $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue - ocs[ocLevel];
+        	break;
+            case "OcNpStrength": //宫本半藏OC宝具威力提升
+                $("txtNpStrength").value = $("txtNpStrength").basevalue + ocs[ocLevel];
+        	break;
+	    case "CombinedDecrease":
+	        $("txtEnemyDefence").value = $("txtEnemyDefence").basevalue - ocs[ocLevel];
+	        $("txtCardBuff").value = $("txtCardBuff").basevalue + ocs[ocLevel];
+		break;
+	    case "NpSpecialAttack": //宝具特攻
+                $("txtNpSpecialAttack").value = ocs[ocLevel];
+        	break;
+            case "SpecialAttackBuff": //杰克女性特攻
+                $("txtSpecialAttack").value = ocs[ocLevel];
         }
     }
     function adjustOc(is_forced){
@@ -727,41 +728,44 @@
 	let oldocLevel = $("ddlOvercharge").oldvalue;
 	if(ocs["oc1"] == ocs["oc5"]){
 	    $("ddlOvercharge").selectedIndex = 0;
+	    return;
 	}
-        else if (ocs.type == "NpRemainHpDamage") {//双子宝具
-            calNpRemainHpDamage();
-        }
-        else if (ocs.type == "OcNpDamage") {//自爆弓
-            calOcNpDamage();
-        }
-	else if (ocs.type == "OcCardBuff") {//R金时OC绿魔放
-            let o = getFloat("txtCardBuff");
-            $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
-        }
-        else if (ocs.type == "OcAttackBuff") {//B兰OC加攻
-            let o = getFloat("txtAttackBuff");
-            $("txtAttackBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
-        }
-        else if (ocs.type == "DefDecrease") {//宝具前降防
-            let o = getFloat("txtEnemyDefence");
-            $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
-        }
-        else if (ocs.type == "OcNpStrength") {//宫本半藏OC宝具威力提升
-            let o = getFloat("txtNpStrength");
-            $("txtNpStrength").value = o + ocs[ocLevel] - ocs[oldocLevel];
-        }
-	else if (ocs.type == "CombinedDecrease") {
-            let o = getFloat("txtEnemyDefence");
-            $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
-	    o = getFloat("txtCardBuff");
-            $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
-        }
-	else if (ocs.type == "NpSpecialAttack") {//宝具特攻
-            $("txtNpSpecialAttack").value = ocs[ocLevel];
-        }
-        else if (ocs.type == "SpecialAttackBuff") {//杰克女性特攻
-            let o = getFloat("txtSpecialAttack");
-            $("txtSpecialAttack").value = o + ocs[ocLevel] - ocs[oldocLevel];
+	let o = 0;
+        switch(ocs.type) {
+	    case "NpRemainHpDamage":
+                calNpRemainHpDamage();
+        	break;
+            case "OcNpDamage":
+                calOcNpDamage();
+        	break;
+	    case "OcCardBuff":
+                o = getFloat("txtCardBuff");
+                $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
+        	break;
+            case "OcAttackBuff":
+                o = getFloat("txtAttackBuff");
+                $("txtAttackBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
+        	break;
+            case "DefDecrease":
+                o = getFloat("txtEnemyDefence");
+                $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
+        	break;
+            case "OcNpStrength":
+                o = getFloat("txtNpStrength");
+                $("txtNpStrength").value = o + ocs[ocLevel] - ocs[oldocLevel];
+        	break;
+	    case "CombinedDecrease":
+                o = getFloat("txtEnemyDefence");
+                $("txtEnemyDefence").value = o - ocs[ocLevel] + ocs[oldocLevel];
+	        o = getFloat("txtCardBuff");
+                $("txtCardBuff").value = o + ocs[ocLevel] - ocs[oldocLevel];
+        	break;
+	    case "NpSpecialAttack":
+                $("txtNpSpecialAttack").value = ocs[ocLevel];
+        	break;
+            case "SpecialAttackBuff":
+                o = getFloat("txtSpecialAttack");
+                $("txtSpecialAttack").value = o + ocs[ocLevel] - ocs[oldocLevel];
         }
     }
 
