--- a/calc.html
+++ b/calc.html
@@ -355,11 +355,11 @@
     $("ckIsMaxGrail").onchange = function () {
         let id = $("ddlServant").value;
         if (id == "-1") {
-            $("ckIsMaxGrail").checked = false;
+            this.checked = false;
             return;
         }
         let servant = servants[id];
-        if ($("ckIsMaxGrail").checked) {
+        if (this.checked) {
             $("txtAttack").value = servant.maxAtk;
             $("txtMaxHp").value = servant.maxHp;
             $("ddlLvs").selectedIndex=1;
@@ -375,7 +375,7 @@
     $("ddlLvs").onchange=function(){
         let id=$("ddlServant").value;
         if (id == "-1") {
-            $("ddlLvs").selectedIndex = 0;
+            this.selectedIndex = 0;
             return;
         }
         let servant = servants[id];  
@@ -394,7 +394,7 @@
             if(lv <= maxLv){
                 $("txtAttack").value = servant.atk;
                 $("txtMaxHp").value = servant.hp;
-                $("ddlLvs").selectedIndex = 0;//默认
+                this.selectedIndex = 0;//默认
             }
             else {
                 if(servant.star > 1){
@@ -444,11 +444,11 @@
     };
     //礼装
     $("ddlCraftEssence").onchange=function(){
-        if($("ddlCraftEssence").selectedIndex == 9) {
+        if(this.selectedIndex == 9) {
             return;
         }
-	$("txtCraftEssenceAtk").value = $("ddlCraftEssence").value;
-        switch($("ddlCraftEssence").selectedIndex) {
+	$("txtCraftEssenceAtk").value = this.value;
+        switch(this.selectedIndex) {
             case 5:
             case 6:
                 $("txtCraftEssenceHp").value = 629;
@@ -502,7 +502,7 @@
     //OC等级选中项发生变化事件
     $("ddlOvercharge").onchange = function () {
         adjustOc();
-	$("ddlOvercharge").oldvalue = $("ddlOvercharge").value;
+	this.oldvalue = this.value;
     };
     $("btnClearBuff").onclick = function() {
             clearBuff();
