--- a/calc.html
+++ b/calc.html
@@ -140,7 +140,7 @@
             <tr>
                 <td>目标数</td>
                 <td>
-                    <input type="number" id="txtNTarget" />
+                    <input type="text" id="txtNTarget" />
                 </td>
                 <td>OC等级</td>
                 <td>
@@ -284,15 +284,15 @@
                 </td>
                 <td>敌人1鞭尸</td>
                 <td>
-                    <input type="number" id="txtOverkill1" value="0" />
+                    <input type="text" id="txtOverkill1" value="0" />
                 </td>
                 <td>敌人2鞭尸</td>
                 <td>
-                    <input type="number" id="txtOverkill2" value="0" />
+                    <input type="text" id="txtOverkill2" value="0" />
                 </td>
                 <td>敌人3鞭尸</td>
                 <td>
-                    <input type="number" id="txtOverkill3" value="0" />
+                    <input type="text" id="txtOverkill3" value="0" />
                 </td>
             </tr>
             <tr>
